// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubHeadline > should render as h2 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-normal);
}

<h2
  class="circuit-0"
>
  h2 subheading
</h2>
`;

exports[`SubHeadline > should render as h3 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-normal);
}

<h3
  class="circuit-0"
>
  h3 subheading
</h3>
`;

exports[`SubHeadline > should render as h4 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-normal);
}

<h4
  class="circuit-0"
>
  h4 subheading
</h4>
`;

exports[`SubHeadline > should render as h5 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-normal);
}

<h5
  class="circuit-0"
>
  h5 subheading
</h5>
`;

exports[`SubHeadline > should render as h6 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-normal);
}

<h6
  class="circuit-0"
>
  h6 subheading
</h6>
`;
